--- a/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
+++ b/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
@@ -15,7 +15,7 @@
       </a>
 
       <div class="side-right">
-        <a href="#" class="button btn-flat button-search">
+        <a href="#modal-search-newspaper" class="button btn-flat button-search modal-trigger">
           <img src="/images/newspaper/icons/icon-search.svg" height="24" />
         </a>
       </div>
