--- a/app/client/templates/pages/newspaper/pages/featured/contentNewspaperFeatured.html
+++ b/app/client/templates/pages/newspaper/pages/featured/contentNewspaperFeatured.html
@@ -1,179 +1,344 @@
 <template name="contentNewspaperFeatured">
 
-<section class="slider-featured">
+<div class="newspaperFeatured">
 
-  <div class="inner-slider">
-    <figure class="image-featured">
-      <a href="#">
-        <img src="/images/newspaper/img-destaque.png" width="100%" />
-      </a>
-    </figure>
-    <div class="info-featured">
-      <h2 class="title-featured">
+  <section class="slider-featured">
+
+    <div class="inner-slider">
+      <figure class="image-featured">
         <a href="#">
-          Possivel candidatura de vice deixa Obama em situação desconfortável
+          <img src="/images/newspaper/img-destaque.png" width="100%" />
         </a>
+      </figure>
+      <div class="info-featured">
+        <h2 class="title-featured">
+          <a href="#">
+            Possivel candidatura de vice deixa Obama em situação desconfortável
+          </a>
+        </h2>
+        <p class="description-featured">
+          O Presidente Barack Obama está em situação desconfortável, apanhado entre as aspirações à Casa
+        </p>
+
+        <div class="info-featured-bottom">
+          <div class="info-author">
+            <a href="#">
+              <img src="/images/avatar/avatar1.png" height="32" />
+            </a>
+            <span>
+              <a href="#">EFRÉM RIBEIRO</a>
+            </span>
+          </div>
+          <div class="info-date">
+            <span>- 15 JUN 2015</span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="inner-slider">
+      <figure class="image-featured">
+        <a href="#">
+          <img src="/images/newspaper/img-destaque2.png" width="100%" />
+        </a>
+      </figure>
+
+      <div class="info-featured">
+        <h2 class="title-featured">
+          <a href="#">
+            Possivel candidatura de vice deixa Obama em situação desconfortável
+          </a>
+        </h2>
+        <p class="description-featured">
+          O Presidente Barack Obama está em situação desconfortável, apanhado entre as aspirações à Casa
+        </p>
+
+        <div class="info-featured-bottom">
+          <div class="info-author">
+            <a href="#">
+              <img src="/images/avatar/avatar1.png" height="32" />
+            </a>
+            <span>
+              <a href="#">EFRÉM RIBEIRO</a>
+            </span>
+          </div>
+          <div class="info-date">
+            <span>- 15 JUN 2015</span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="inner-slider">
+      <figure class="image-featured">
+        <a href="#">
+          <img src="/images/newspaper/img-destaque3.png" width="100%" />
+        </a>
+      </figure>
+      <div class="info-featured">
+        <h2 class="title-featured">
+          <a href="#">
+            Possivel candidatura de vice deixa Obama em situação desconfortável
+          </a>
+        </h2>
+        <p class="description-featured">
+          O Presidente Barack Obama está em situação desconfortável, apanhado entre as aspirações à Casa
+        </p>
+
+        <div class="info-featured-bottom">
+          <div class="info-author">
+            <a href="#">
+              <img src="/images/avatar/avatar1.png" height="32" />
+            </a>
+            <span>
+              <a href="#">EFRÉM RIBEIRO</a>
+            </span>
+          </div>
+          <div class="info-date">
+            <span>- 15 JUN 2015</span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="inner-slider">
+      <figure class="image-featured">
+        <a href="#">
+          <img src="/images/newspaper/img-destaque.png" width="100%" />
+        </a>
+      </figure>
+      <div class="info-featured">
+        <h2 class="title-featured">
+          <a href="#">
+            Possivel candidatura de vice deixa Obama em situação desconfortável
+          </a>
+        </h2>
+        <p class="description-featured">
+          O Presidente Barack Obama está em situação desconfortável, apanhado entre as aspirações à Casa
+        </p>
+
+        <div class="info-featured-bottom">
+          <div class="info-author">
+            <a href="#">
+              <img src="/images/avatar/avatar1.png" height="32" />
+            </a>
+            <span>
+              <a href="#">EFRÉM RIBEIRO</a>
+            </span>
+          </div>
+          <div class="info-date">
+            <span>- 15 JUN 2015</span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </section>
+
+  <div class="main-list">
+
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post1.png" width="100%" />
+      </figure>
+
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
       </h2>
-      <p class="description-featured">
-        O Presidente Barack Obama está em situação desconfortável, apanhado entre as aspirações à Casa
-      </p>
 
-      <div class="info-featured-bottom">
-        <div class="info-author">
-          <a href="#">
-            <img src="/images/avatar/avatar1.png" height="42" />
-          </a>
-          <span>
-            <a href="#">EFRÉM RIBEIRO</a>
-          </span>
-        </div>
-        <div class="info-date">
-          <span>- 15 JUN 2015</span>
-        </div>
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
       </div>
 
     </div>
-  </div>
-  <div class="inner-slider">
-    <figure class="image-featured">
-      <a href="#">
-        <img src="/images/newspaper/img-destaque2.png" width="100%" />
-      </a>
-    </figure>
 
-    <div class="info-featured">
-      <h2 class="title-featured">
-        <a href="#">
-          Possivel candidatura de vice deixa Obama em situação desconfortável
-        </a>
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post2.png" width="100%" />
+      </figure>
+
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
       </h2>
-      <p class="description-featured">
-        O Presidente Barack Obama está em situação desconfortável, apanhado entre as aspirações à Casa
-      </p>
 
-      <div class="info-featured-bottom">
-        <div class="info-author">
-          <a href="#">
-            <img src="/images/avatar/avatar1.png" height="42" />
-          </a>
-          <span>
-            <a href="#">EFRÉM RIBEIRO</a>
-          </span>
-        </div>
-        <div class="info-date">
-          <span>- 15 JUN 2015</span>
-        </div>
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
       </div>
 
     </div>
-  </div>
-  <div class="inner-slider">
-    <figure class="image-featured">
-      <a href="#">
-        <img src="/images/newspaper/img-destaque3.png" width="100%" />
-      </a>
-    </figure>
-    <div class="info-featured"><!--
-      <h2 class="title-featured">
-        <a href="#">
-          Possivel candidatura de vice deixa Obama em situação desconfortável
-        </a>
-      </h2> -->
-      <p class="description-featured">
-        O Presidente Barack Obama está em situação desconfortável, apanhado entre as aspirações à Casa
-      </p>
 
-      <div class="info-featured-bottom">
-        <div class="info-author">
-          <a href="#">
-            <img src="/images/avatar/avatar1.png" height="42" />
-          </a>
-          <span>
-            <a href="#">EFRÉM RIBEIRO</a>
-          </span>
-        </div>
-        <div class="info-date">
-          <span>- 15 JUN 2015</span>
-        </div>
-      </div>
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post1.png" width="100%" />
+      </figure>
 
-    </div>
-  </div>
-  <div class="inner-slider">
-    <figure class="image-featured">
-      <a href="#">
-        <img src="/images/newspaper/img-destaque.png" width="100%" />
-      </a>
-    </figure>
-    <div class="info-featured">
-      <h2 class="title-featured">
-        <a href="#">
-          Possivel candidatura de vice deixa Obama em situação desconfortável
-        </a>
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
       </h2>
-      <p class="description-featured">
-        O Presidente Barack Obama está em situação desconfortável, apanhado entre as aspirações à Casa
-      </p>
 
-      <div class="info-featured-bottom">
-        <div class="info-author">
-          <a href="#">
-            <img src="/images/avatar/avatar1.png" height="42" />
-          </a>
-          <span>
-            <a href="#">EFRÉM RIBEIRO</a>
-          </span>
-        </div>
-        <div class="info-date">
-          <span>- 15 JUN 2015</span>
-        </div>
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
       </div>
 
     </div>
-  </div>
 
-</section>
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post2.png" width="100%" />
+      </figure>
 
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
+      </h2>
 
-<div class="main-list">
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
+      </div>
 
-  <div class="post-model">
-    <figure class="post-image">
-      <img src="/images/newspaper/img-post1.png" width="100%" />
-    </figure>
-
-    <h2 class="post-title">
-      <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-    </h2>
-
-    <div class="post-info">
-      <strong class="post-info-author">
-        <a href="#" title="">PAULA FERNANDES</a>
-      </strong>
-      <span class="post-info-date">
-        - 15/02/2015
-      </span>
     </div>
 
-  </div>
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post1.png" width="100%" />
+      </figure>
 
-  <div class="post-model">
-    <figure class="post-image">
-      <img src="/images/newspaper/img-post2.png" width="100%" />
-    </figure>
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
+      </h2>
 
-    <h2 class="post-title">
-      <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-    </h2>
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
+      </div>
 
-    <div class="post-info">
-      <strong class="post-info-author">
-        <a href="#" title="">PAULA FERNANDES</a>
-      </strong>
-      <span class="post-info-date">
-        - 15/02/2015
-      </span>
     </div>
+
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post2.png" width="100%" />
+      </figure>
+
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
+      </h2>
+
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
+      </div>
+
+    </div>
+
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post1.png" width="100%" />
+      </figure>
+
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
+      </h2>
+
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
+      </div>
+
+    </div>
+
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post2.png" width="100%" />
+      </figure>
+
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
+      </h2>
+
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
+      </div>
+
+    </div>
+
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post1.png" width="100%" />
+      </figure>
+
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
+      </h2>
+
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
+      </div>
+
+    </div>
+
+    <div class="post-model">
+      <figure class="post-image">
+        <img src="/images/newspaper/img-post2.png" width="100%" />
+      </figure>
+
+      <h2 class="post-title">
+        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
+      </h2>
+
+      <div class="post-info">
+        <strong class="post-info-author">
+          <a href="#" title="">PAULA FERNANDES</a>
+        </strong>
+        <span class="post-info-date">
+          - 15/02/2015
+        </span>
+      </div>
+
+    </div>
+
+
 
   </div>
 
