--- a/app/client/templates/pages/newspaper/pages/latest/layouts/headerLatest.html
+++ b/app/client/templates/pages/newspaper/pages/latest/layouts/headerLatest.html
@@ -5,7 +5,7 @@
     <div class="nav-wrapper">
 
       <div class="side-left">
-        <a class="button btn-flat button-collapse" data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'newspaper' }}">
+        <a class="button btn-flat button-collapse" href="{{ pathFor 'newspaper' }}">
           <img src="/images/newspaper/icons/icon-back.svg" height="20" />
         </a>
       </div>
@@ -15,9 +15,9 @@
       </a>
 
       <div class="side-right">
-        <!-- <a href="#" class="button btn-flat button-search">
+        <a href="#modal-search-newspaper" class="button btn-flat button-search modal-trigger">
           <img src="/images/newspaper/icons/icon-search.svg" height="24" />
-        </a> -->
+        </a>
       </div>
 
     </div>
