--- a/app/client/templates/pages/radio/boafm/components/message/addMessage.html
+++ b/app/client/templates/pages/radio/boafm/components/message/addMessage.html
@@ -1,6 +1,6 @@
 <template name="addMessageBOAFM">
 
-  <div class="message roomUpIn">
+  <div id="message-boafm" class="message">
 
     <div class="buttons-actions left">
       <a href="#" id="btn-show-add-image">
