--- a/app/client/templates/pages/radio/fmmn/components/message/addMessage.html
+++ b/app/client/templates/pages/radio/fmmn/components/message/addMessage.html
@@ -1,6 +1,6 @@
 <template name="addMessageFMMN">
 
-  <div class="message roomUpIn">
+  <div id="message-fmmn" class="message">
 
     <div class="buttons-actions left">
       <a href="#" id="btn-show-add-image">
