--- a/app/client/templates/pages/newspaper/layouts/navigationTabs.html
+++ b/app/client/templates/pages/newspaper/layouts/navigationTabs.html
@@ -5,17 +5,16 @@
       <ul class="tabs-items">
 
         <li class="tab-item">
-          <a class="{{isActiveRoute 'newspaper'}}" data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'home' }}">Capa</a>
+          <a class="{{isActiveRoute 'newspaper'}}" href="{{ pathFor 'newspaper' }}">Capa</a>
         </li>
         <li class="tab-item">
-          <a class="{{isActiveRoute 'contentNewspaperLatest'}}" data-transition-out="scaleOut" data-transition-in="scaleIn" href="{{ pathFor 'contentNewspaperLatest' }}">Últimas</a>
+          <a class="{{isActiveRoute 'newspaperLatest'}}" href="{{ pathFor 'newspaperLatest' }}">Últimas</a>
         </li>
-
-        <li class="tab-item"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="#">Seções</a></li>
-        <li class="tab-item"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="#">Colunas</a></li>
-        <li class="tab-item"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="#">Especiais</a></li>
-        <li class="tab-item"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="#">Fotos</a></li>
-        <li class="tab-item"><a data-transition-out="scaleOut" data-transition-in="scaleIn" href="#">Vídeos</a></li>
+        <li class="tab-item"><a class="{{isActiveRoute 'newspaperSection'}}" href="{{ pathFor 'newspaperSection' }}">Seções</a></li>
+        <li class="tab-item"><a class="{{isActiveRoute 'newspaperColumns'}}" href="{{ pathFor 'newspaperColumns' }}">Colunas</a></li>
+        <li class="tab-item"><a class="{{isActiveRoute 'newspaperSpecials'}}" href="{{ pathFor 'newspaperSpecials' }}">Especiais</a></li>
+        <li class="tab-item"><a class="{{isActiveRoute 'newspaperPhotos'}}" href="{{ pathFor 'newspaperPhotos' }}">Fotos</a></li>
+        <li class="tab-item"><a class="{{isActiveRoute 'newspaperVideos'}}" href="{{ pathFor 'newspaperVideos' }}">Vídeos</a></li>
 
       </ul>
 
