--- a/app/client/templates/pages/newspaper/newspaper.scss
+++ b/app/client/templates/pages/newspaper/newspaper.scss
@@ -2,10 +2,11 @@
 
 .newspaper-page {
 
-  font-family:'PT Sans', sans-serif;
+  font-family:'PT Sans', Helvetica Neue, Helvetica, sans-serif;
 
   .content {
     //height:100%;
+    overflow:hidden;
   }
 
   a {
@@ -27,7 +28,7 @@
       background:#2d2d2d!important;
     }
     .title {
-      font-family:'Bree Serif', serif!important;font-weight:bold!important;
+      font-family:'Bree Serif', Roboto, Helvetica Neue, Helvetica, Arial, sans-serif!important;color:#fff;line-height:44px!important;font-weight:bold!important;font-size:22px;
     }
     .logo, .title {
       position:absolute;left:0;top:0;height:48px;line-height:48px;z-index:0;width:100%;font-size:22px;text-align:center;
@@ -134,7 +135,7 @@
       .title-featured {
         margin:0!important;line-height:0!important;max-height:44px;overflow:hidden;
         a {
-          font-family:'Bree Serif', serif;
+          font-family:'Bree Serif', Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;
           font-size: 18px;
           line-height: 22px;
           font-weight: bold;
@@ -172,11 +173,11 @@
   .slick-dots {
     position: absolute;
     right: 5%;
-    top: 144px;
+    top: 148px;
     li {
       float:left;margin-left:5px;
       button {
-        border:none;background:rgba(255,255,255,0.6);text-indent: -9999px;width:15px;height:15px;padding:0!important;
+        border:none;background:rgba(255,255,255,0.6);text-indent: -9999px;width:10px;height:10px;padding:0!important;
 
         border-radius:50%;
       }
@@ -199,36 +200,31 @@
   overflow:hidden;position:relative;height:100%;
 }
 
-.newspaper-tabs {
-  position:relative;height:100%;left:0;width:100%;
 
-  .main-list {
-    margin-top:108px;
-  }
+.main-list {
+  margin-top:108px;
+}
 
-  .post-model {
-    display:table;width:100%;position:relative;padding:15px 0.75rem;
-    .post-image {
-      float:left;margin:0 15px 0 0!important;max-width:75px;
-      img {
-        width:100%;
+.post-model {
+  display:table;width:100%;position:relative;padding:15px 0.75rem 15px 15px;
+  .post-image {
+    float:left;margin:0 15px 0 0!important;max-width:75px;
+    img {
+      width:100%;
 
-        border-radius:5px;
-        -webkit-border-radius:5px;
-        -moz-border-radius:5px;
-      }
-    }
-    .post-title {
-      margin:0!important;line-height:0!important;
-      a {font-size: 18px;line-height: 22px;font-family:'Bree Serif', serif;}
-    }
-    .post-info {
-      .post-info-author {float:left; line-height: 42px;font-weight: bold;font-size:12px;}
-      .post-info-date {float:left;margin-left:5px;font-size: 12px;color: #777;line-height: 42px;}
+      border-radius:5px;
+      -webkit-border-radius:5px;
+      -moz-border-radius:5px;
     }
   }
-
-
+  .post-title {
+    margin:0!important;line-height:0!important;max-height: 66px;overflow: hidden;
+    a {font-size: 18px;line-height: 22px;font-family:'Bree Serif', Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;font-weight:bold;}
+  }
+  .post-info {
+    .post-info-author {float:left; line-height: 26px;font-weight: bold;font-size:12px;}
+    .post-info-date {float:left;margin-left:5px;font-size: 12px;color: #777;line-height: 26px;}
+  }
 }
 
 
@@ -236,6 +232,9 @@
   position:relative;height:100%;
   .newspaper-tabs-bottom {
     bottom:0;opacity:1;
+  }
+  .newspaper-page {
+    padding-bottom:50px;
   }
   .transitions-container {
     // padding-bottom:48px;position:relative;z-index:4;
@@ -252,7 +251,7 @@
   position: fixed;
   width: 100%;
   left:0;
-  z-index:9998;
+  z-index:8;
   width:100%;
   background:#212121;
   color:#fff!important;
@@ -266,18 +265,18 @@
 
 
 
-  &:before {
-    position:absolute;width:100%;height:40px;top:-40px;left:0;content:"";
+  // &:before {
+  //   position:absolute;width:100%;height:40px;top:-40px;left:0;content:"";
 
-    background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1)));
-    background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
-    background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
-    background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
-    background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
+  //   background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+  //   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1)));
+  //   background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+  //   background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+  //   background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+  //   background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%);
+  //   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
 
-  }
+  // }
 
 
   .indicator {
@@ -288,10 +287,14 @@
   .tabs-items {
     background:none!important;margin:0;height:50px;
     .active {
-      box-shadow: 0px 4px 0px 0px #00B7F4 inset;
+      box-shadow: 0px 3px 0px 0px #00B7F4 inset;
     }
     li {
-      margin:0;padding:0;
+      margin:0;padding:0;position:relative;
+
+      // &:before {
+      //   position:absolute;right:0;top:22px;width:5px;height:5px;background:#fff;content:"";border-radius:50%;-webkit-border-radius:50%;-moz-border-radius:50%;
+      // }
     }
     a {
      width:100%;display:block;float:left;color:#fff!important;font-size:14px;font-weight:bold;line-height:50px;height:50px;text-align:center;
@@ -316,7 +319,7 @@
 
   }
   .slick-disabled {
-    opacity:0;
+    opacity:0;visibility:hidden;display:none;
   }
   .slick-prev {
     left:0;
