--- a/app/client/templates/pages/radio/boafm/components/message/fileMessage.html
+++ b/app/client/templates/pages/radio/boafm/components/message/fileMessage.html
@@ -1,5 +1,5 @@
 <template name="fileMessageBOAFM">
-  <div class="file-message">
+  <div id="file-message-boafm" class="file-message">
     <strong id="btn-cancel-file">
       <img src="/images/television/icons/icon-close-white.svg" height="20" />
     </strong>
