--- a/app/client/templates/pages/radio/fmmn/fmmn.scss
+++ b/app/client/templates/pages/radio/fmmn/fmmn.scss
@@ -69,15 +69,31 @@
 
 
 
-.show-message {
-  .message {
-    bottom:0;opacity:1;
+.show-message-fmmn {
+  position:relative;height:100%;
+  #message-fmmn {
+    bottom:0;opacity:1!important;
+  }
+  .transitions-container {
+    //padding-bottom:48px;position:relative;z-index:4;
+    -webkit-perspective:none!important;
+    -moz-perspective: none!important;
+    perspective: none!important;
   }
 }
 
 
+
 .message {
-  bottom:-52px;position:fixed;left:0;width:100%;box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);height:48px;background:#fff;opacity:0;z-index:5;
+  bottom:-52px;
+  position:fixed;
+  left:0;
+  width:100%;
+  box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);
+  height:48px;
+  background:#fff;
+  opacity:0;
+  z-index:5;
 
 
   transition:all .4s ease-in-out;
@@ -213,7 +229,7 @@
 }
 
 
-  .add-image-buttons {
+  .add-image-buttons-fmmn {
      #btn-show-add-video {
       opacity:0.2;
     }
@@ -225,7 +241,7 @@
     }
   }
 
-  .add-video-buttons {
+  .add-video-buttons-fmmn {
      #btn-show-add-image {
       opacity:0.2;
     }
@@ -237,7 +253,7 @@
     }
   }
 
-  .add-image-buttons, .add-video-buttons {
+  .add-image-buttons-fmmn, .add-video-buttons-fmmn {
     position:relative;
 
     &:before {
