--- a/app/client/templates/pages/television/pages/program/components/message/addMessage.html
+++ b/app/client/templates/pages/television/pages/program/components/message/addMessage.html
@@ -1,6 +1,6 @@
 <template name="addMessage">
 
-  <div class="message roomUpIn">
+  <div id="message-program" class="message">
 
     <div class="buttons-actions left">
       <a href="#" id="btn-show-add-image">
