--- a/app/client/templates/pages/television/pages/program/program.html
+++ b/app/client/templates/pages/television/pages/program/program.html
@@ -18,26 +18,28 @@
 
     <main class="content has-header">
 
+      <div class="inner-content">
+
       <!--  <div class="play-tv padding">
         <iframe src="http://new.livestream.com/accounts/3332377/events/2958396/player?width=640&height=260&autoPlay=false&mute=false" width="100%" height="260" frameborder="0" scrolling="no"> </iframe>
       </div> -->
 
 
-      <div class="info-program">
-        <div class="row">
-          <div class="col s6">
-            <small>DIA(S)</small>
-            <strong class="truncate">Segunda à Sexta</strong>
+        <div class="info-program">
+          <div class="row">
+            <div class="col s6">
+              <small>DIA(S)</small>
+              <strong class="truncate">Segunda à Sexta</strong>
+            </div>
+            <div class="col s6">
+              <small>HORÁRIO</small>
+              <strong class="truncate">10:00h às 12:40h</strong>
+            </div>
           </div>
-          <div class="col s6">
-            <small>HORÁRIO</small>
-            <strong class="truncate">10:00h às 12:40h</strong>
-          </div>
+          <p class="program-description">
+            O Ronda é o maior case de sucesso da TV Piauiense. Carinhosamente apelidado como Ronda do Povão, possui uma audiência avassaladora e se tornou um serviço de utilidade pública, um elo entre piauienses e autoridades.
+          </p>
         </div>
-        <p class="program-description">
-          O Ronda é o maior case de sucesso da TV Piauiense. Carinhosamente apelidado como Ronda do Povão, possui uma audiência avassaladora e se tornou um serviço de utilidade pública, um elo entre piauienses e autoridades.
-        </p>
-      </div>
 
 
         <div class="tab-flow row">
@@ -75,12 +77,12 @@
         </div>
 
 
+        </div>
+
+
     </main>
 
-
   </div>
-
-  {{> addMessage }}
 
 
 </template>
