Removido conflito e comentarios
Conflicts:
	app/client/templates/pages/authentication/authentication.js
	app/lib/collections.js
	app/lib/tools.js

--- a/app/client/templates/pages/authentication/authentication.html
+++ b/app/client/templates/pages/authentication/authentication.html
@@ -20,8 +20,7 @@
 
     <div class="sign-in">
       <span>Ainda não tem conta?</span>
-      <!-- <a class="btn modal-trigger" href="#modal-sign-in"> -->
-      <a class="btn modal-trigger" href="{{ pathFor 'home' }}">
+      <a class="btn modal-trigger" href="#modal-sign-in">
         CRIAR CONTA
       </a>
     </div>
@@ -50,7 +49,7 @@
 <template name="loginGoogle">
     <a href="#" title="" class="bg-google" data-service="google" id="loginGoogleButton">
       <i class="icon-googleplus-rect"></i>
-      <span>Google +1</span>
+      <span>Google +</span>
     </a>
-</template> -->
+</template>-->
 
