--- a/app/client/templates/pages/authentication/pages/log-in.html
+++ b/app/client/templates/pages/authentication/pages/log-in.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="input-field col s12">
-          <input id="password_0" type="text">
+          <input id="password_0" type="password">
           <label for="password_0" class="">Sua senha</label>
         </div>
 
