--- a/app/client/templates/pages/authentication/pages/reset-password-ok.html
+++ b/app/client/templates/pages/authentication/pages/reset-password-ok.html
@@ -8,13 +8,72 @@
 
       <strong>Enviamos um email para você</strong>
 
-      <span>Confere a sua caixa de entrada, só seguir passo a passo, tá certo?</span>
+      <span>Confere a sua caixa de entrada, só pegar o código e adicionar no campo abaixo, tá certo?</span>
 
     </div>
 
-    <a href="{{ pathFor 'home' }}" class="go-to-home btn modal-action modal-close" data-transition-out="scaleOut" data-transition-in="scaleIn">
-      voltar ao início
-    </a>
+    <div class="form-pattern modal-content">
+
+      <div class="row">
+
+        <div class="input-field col s12">
+          <input id="code" type="text">
+          <label for="code" class="">Qual o codigo?</label>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="modal-footer">
+
+       <a id="btn-receiver-code" class="btn modal-trigger" href="#">
+          CONFERIR
+      </a>
+
+    </div>
+
+  </section>
+
+</template>
+
+<template name="resetPasswordOk2">
+
+  <section id="modal-reset-pass-ok" class="modal modal-fixed-footer">
+
+    <div class="message-feedback center-align">
+
+      <img src="images/home/icons/icon-send-mail.svg"  height="145" />
+
+      <strong>Digite sua nova senha abaixo</strong>
+
+    </div>
+
+    <div class="form-pattern modal-content">
+
+      <div class="row">
+
+        <div class="input-field col s12">
+          <input id="password_reseted_0" type="password">
+          <label for="password_reseted_0" class="">Digite uma senha</label>
+        </div>
+
+        <div class="input-field col s12">
+          <input id="password_reseted_1" type="password">
+          <label for="password_reseted_1" class="">Repita sua senha</label>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="modal-footer">
+
+       <a id="btn-update-password" class="btn" href="#" data-service="password">
+          ALTERAR SENHA
+      </a>
+
+    </div>
 
   </section>
 
