--- a/app/client/templates/pages/authentication/pages/reset-password.html
+++ b/app/client/templates/pages/authentication/pages/reset-password.html
@@ -19,8 +19,8 @@
       <div class="row">
 
         <div class="input-field col s12">
-          <input id="mail" type="text">
-          <label for="mail" class="">Qual seu e-mail</label>
+          <input id="mail-reset" type="text">
+          <label for="mail-reset" class="">Qual seu e-mail</label>
         </div>
 
       </div>
@@ -29,7 +29,7 @@
 
     <div class="modal-footer">
 
-       <a class="btn modal-trigger" href="#modal-send-mail-ok">
+       <a id="btn-reset-password" class="btn modal-trigger" href="#modal-send-mail-ok">
           ENVIAR
       </a>
 
