--- a/app/client/templates/pages/authentication/pages/sign-in.html
+++ b/app/client/templates/pages/authentication/pages/sign-in.html
@@ -27,12 +27,12 @@
         </div>
 
         <div class="input-field col s12">
-          <input id="password_0" type="text">
+          <input id="password_0" type="password">
           <label for="password_0" class="">Digite uma senha</label>
         </div>
 
         <div class="input-field col s12">
-          <input id="password_1" type="text">
+          <input id="password_1" type="password">
           <label for="password_1" class="">Repita sua senha</label>
         </div>
 
@@ -42,9 +42,9 @@
 
     <div class="modal-footer">
 
-       <a class="btn modal-trigger" href="#modal-sign-in-ok">
+       <button id="btn-sign-in" class="btn" data-service="password">
           CRIAR CONTA
-      </a>
+      </button>
 
     </div>
 
