Lista de programas da TV
- Adicionado a listagem por categoria
- Adicionado o id de cada programa para ir para a pagina do programa

--- a/app/client/templates/pages/television/television.html
+++ b/app/client/templates/pages/television/television.html
@@ -9,35 +9,7 @@
     <main class="content has-header">
 
       <ul class="programs-list">
-        <div class="list-category">
-          <strong>JORNALISMO POPULAR</strong>
-          <li class="programs-list-item">
-            <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-              <img src="/images/television/img-patrulha.png" width="100%" />
-            </a>
-          </li>
-          <li class="programs-list-item">
-            <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-              <img src="/images/television/img-ronda.png" width="100%" />
-            </a>
-          </li>
-        </div>
-        <div class="list-category">
-          <strong>ESPORTIVIDADE</strong>
-          <li class="programs-list-item">
-            <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-              <img src="/images/television/img-ole.png" width="100%" />
-            </a>
-          </li>
-        </div>
-        <div class="list-category">
-          <strong>DOMINGO AVENTURA</strong>
-          <li class="programs-list-item">
-            <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-              <img src="/images/television/img-incrivel.png" width="100%" />
-            </a>
-          </li>
-        </div>
+      {{> programs}}
       </ul>
 
     </main>
@@ -46,4 +18,18 @@
 
   </div>
 
+</template>
+
+
+<template name="programs">
+    {{#each programList}}
+      <div class="list-category">
+        {{#if categoryValid}}<strong>{{category_name}}</strong>{{/if}}
+        <li class="programs-list-item">
+          <a href="{{pathFor 'program' _id=this.program_id }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
+            <img src="{{image_avatar}}" width="100%" />
+          </a>
+        </li>
+      </div>
+    {{/each}}
 </template>
