--- a/admin/client/views/programs/new.html
+++ b/admin/client/views/programs/new.html
@@ -52,8 +52,8 @@
 
 			      	<div class="input-field col s6">
 				        <i class="mdi-device-access-time prefix"></i>
-				        <input id="program_hour" type="text" class="validate" data-vm-mask-hour/>
-				        <label for="program_hour">Hora *</label>
+				        <input id="program_hour_begin" type="text" class="validate" data-vm-mask-hour-begin/> às <input id="program_hour_end" type="text" class="validate" data-vm-mask-hour-end/>
+				        <label for="program_hour_begin">Hora *</label>
 			        </div>
 					<div class="input-field col s6">
 						<i class="mdi-notification-event-note prefix"></i>
