--- a/app/client/templates/pages/television/pages/program/program.html
+++ b/app/client/templates/pages/television/pages/program/program.html
@@ -10,9 +10,7 @@
         </a>
       </div>
 
-      <a href="#" class="title center-align">
-        Programa X
-      </a>
+      <a href="#" class="title center-align"></a>
 
     </nav>
 
@@ -20,25 +18,23 @@
 
       <div class="inner-content">
 
-      <!--  <div class="play-tv padding">
+      <div class="play-tv padding">
         <iframe src="http://new.livestream.com/accounts/3332377/events/2958396/player?width=640&height=260&autoPlay=false&mute=false" width="100%" height="260" frameborder="0" scrolling="no"> </iframe>
-      </div> -->
+      </div>
 
 
         <div class="info-program">
           <div class="row">
-            <div class="col s6">
+            <div  class="col s6">
               <small>DIA(S)</small>
-              <strong class="truncate">Segunda à Sexta</strong>
+              <strong id="programDias" class="truncate">Segunda à Sexta</strong>
             </div>
             <div class="col s6">
               <small>HORÁRIO</small>
-              <strong class="truncate">10:00h às 12:40h</strong>
+              <strong class="truncate"><span id="programHoraInicial"></span> às <span id="programHoraFinal"></span></strong>
             </div>
           </div>
-          <p class="program-description">
-            O Ronda é o maior case de sucesso da TV Piauiense. Carinhosamente apelidado como Ronda do Povão, possui uma audiência avassaladora e se tornou um serviço de utilidade pública, um elo entre piauienses e autoridades.
-          </p>
+          <p class="program-description"></p>
         </div>
 
 
