--- a/admin/client/views/programs/update.html
+++ b/admin/client/views/programs/update.html
@@ -51,9 +51,9 @@
 			      <div class="col s12">
 
 			      	<div class="input-field col s6">
-				        <i class="mdi-device-access-time prefix" id="program_img_hour"></i>
-				        <input id="program_hour" type="text" class="validate" data-vm-mask-hour/>
-				        <label for="program_hour" id="program_label_hour">Hora *</label>
+				        <i class="mdi-device-access-time prefix" id="program_img_hour_begin"></i>
+				        <input id="program_hour_begin" type="text" class="validate" data-vm-mask-hour-begin/> às <input id="program_hour_end" type="text" class="validate" data-vm-mask-hour-end/>
+				        <label for="program_hour_begin" id="program_label_hour_begin">Hora *</label>
 			        </div>
 					<div class="input-field col s6">
 						<i class="mdi-notification-event-note prefix" id="program_img_day"></i>
