--- a/app/client/templates/pages/television/pages/program/components/message/addMessage.html
+++ b/app/client/templates/pages/television/pages/program/components/message/addMessage.html
@@ -12,12 +12,12 @@
     </div>
 
     <div class="input-field">
-      <input type="text" name="message" />
+      <input type="text" name="message" id="message" />
     </div>
 
-    <button class="send-button btn btn-flat" type="submit">
+    <a href="#" id="sendMsg" class="send-button btn btn-flat" >
       <img src="/images/television/icons/icon-send-active.svg" height="20" />
-    </button>
+    </a>
 
     {{> addImage }}
     {{> addVideo }}
