--- a/app/client/templates/pages/television/pages/program/pages/timeline/timeline.html
+++ b/app/client/templates/pages/television/pages/program/pages/timeline/timeline.html
@@ -1,17 +1,17 @@
 <template name="timeline">
-
+{{#each contents}}
   <div class="message-item">
 
   <figure class="left">
     <a href="#">
-      <img src="/images/avatar/avatar1.png" width="65" height="65" />
+      <img src="{{user_avatar}}" width="65" height="65" />
     </a>
   </figure>
 
   <div class="message-info">
     <h4 class="message-author">
       <a href="#">
-        Aírton Menezes
+        {{user_name}}
       </a>
     </h4>
     <div class="message-date">
@@ -23,129 +23,18 @@
 
   <div class="message-content">
     <p>
-      Rua toda esburacada aqui no Parque Alvorada
+      {{text}}
     </p>
+    {{#if img}}
+    <a href="#">
+      <img src="{{img}}" width="65" height="65" />
+    </a>
+    {{/if}}
   </div>
 
 </div>
-
-<div class="message-item">
-
-  <figure class="left">
-    <a href="#">
-      <img src="/images/avatar/avatar1.png" width="65" height="65" />
-    </a>
-  </figure>
-
-  <div class="message-info">
-    <h4 class="message-author">
-      <a href="#">
-        Aírton Menezes
-      </a>
-    </h4>
-    <div class="message-date">
-      <img src="/images/television/icons/icon-clock.svg" height="14" />
-      <span>12 min</span>
-    </div>
-  </div>
-
-
-  <div class="message-content">
-    <p>
-      Rua toda esburacada aqui no Parque Alvorada
-    </p>
-    <a href="#">
-      <img src="/images/television/img1.png" width="100%" />
-    </a>
-  </div>
-
-</div>
-
-<div class="message-item">
-
-  <figure class="left">
-    <a href="#">
-      <img src="/images/avatar/avatar1.png" width="65" height="65" />
-    </a>
-  </figure>
-
-  <div class="message-info">
-    <h4 class="message-author">
-      <a href="#">
-        Aírton Menezes
-      </a>
-    </h4>
-    <div class="message-date">
-      <img src="/images/television/icons/icon-clock.svg" height="14" />
-      <span>12 min</span>
-    </div>
-  </div>
-
-
-  <div class="message-content">
-    <p>
-      Rua toda esburacada aqui no Parque Alvorada
-    </p>
-  </div>
-
-</div>
-
-<div class="message-item">
-
-  <figure class="left">
-    <a href="#">
-      <img src="/images/avatar/avatar1.png" width="65" height="65" />
-    </a>
-  </figure>
-
-  <div class="message-info">
-    <h4 class="message-author">
-      <a href="#">
-        Aírton Menezes
-      </a>
-    </h4>
-    <div class="message-date">
-      <img src="/images/television/icons/icon-clock.svg" height="14" />
-      <span>12 min</span>
-    </div>
-  </div>
-
-
-  <div class="message-content">
-    <p>
-      Rua toda esburacada aqui no Parque Alvorada
-    </p>
-  </div>
-
-</div>
-
-<div class="message-item">
-
-  <figure class="left">
-    <a href="#">
-      <img src="/images/avatar/avatar1.png" width="65" height="65" />
-    </a>
-  </figure>
-
-  <div class="message-info">
-    <h4 class="message-author">
-      <a href="#">
-        Aírton Menezes
-      </a>
-    </h4>
-    <div class="message-date">
-      <img src="/images/television/icons/icon-clock.svg" height="14" />
-      <span>12 min</span>
-    </div>
-  </div>
-
-
-  <div class="message-content">
-    <p>
-      Rua toda esburacada aqui no Parque Alvorada
-    </p>
-  </div>
-
-</div>
-
+{{/each }}
+  <a id="mais" class="waves-effect waves-light btn btn-more color-pattern" style="{{mais}}">
+    Carregar mais
+  </a>
 </template>
