--- a/app/client/templates/pages/television/pages/program/components/message/addMessage.html
+++ b/app/client/templates/pages/television/pages/program/components/message/addMessage.html
@@ -17,9 +17,9 @@
       <input type="text" name="message" id="message" />
     </div>
 
-    <a href="#" id="sendMsg" class="send-button btn btn-flat" >
+    <button class="send-button btn btn-flat">
       <img src="/images/television/icons/icon-send-active.svg" height="20" />
-    </a>
+    </button>
 
     {{> addImage }}
     {{> addVideo }}
