--- a/app/client/templates/layouts/navigation.html
+++ b/app/client/templates/layouts/navigation.html
@@ -20,7 +20,7 @@
 
 
     <li class="item-logout">
-      <a href="{{ pathFor 'authentication' }}" title="" data-transition-out="scaleOut" data-transition-in="scaleIn" class="modal-action modal-close">
+      <a id="logout" href="#" title="" data-transition-out="scaleOut" data-transition-in="scaleIn" class="modal-action modal-close">
 
         <img src="images/home/icons/icon-logout.svg" height="22" />
         <span>Desconectar</span>
