--- a/app/client/templates/pages/television/pages/program/pages/timeline/timeline.html
+++ b/app/client/templates/pages/television/pages/program/pages/timeline/timeline.html
@@ -16,7 +16,7 @@
     </h4>
     <div class="message-date">
       <img src="/images/television/icons/icon-clock.svg" height="14" />
-      <span>12 min</span>
+      <span>{{msg_time}}</span>
     </div>
   </div>
 
